tests/compile_errors/type/007_non_callable.xr
// 007_non_callable.xr
// Expected: Compile error - calling non-callable
// Error should mention: not callable, not a function
let x = 42
x()
